federation-config/rating-virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ratings-split
  namespace: bookinfo
spec:
  hosts:
    - ratings.bookinfo.svc.cluster.local
  http:
    - route:
        - destination:
            host: ratings.bookinfo.svc.blue-mesh-imports.local
          weight: 50
        - destination:
            host: ratings.bookinfo.svc.cluster.local
          weight: 50
